--- a/OpenPro.Admin/package.json
+++ b/OpenPro.Admin/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.8"
+    "astro": "^5.15.8",
+    "@astrojs/react": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
