Refactor ProviderCalendars to remove direct API access and integrate backend communication
Updated the ProviderCalendars component and related services to eliminate direct interactions with the OpenPro API, transitioning to a backend-centric architecture. This includes removing the `@openpro-api-react` client and replacing it with backend service calls for data fetching. The changes enhance security by ensuring API keys are managed server-side and streamline data handling through a simplified backend API. Additionally, updated documentation to reflect the new architecture and data flow.

--- a/OpenPro.Admin/tsconfig.json
+++ b/OpenPro.Admin/tsconfig.json
@@ -4,8 +4,6 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@openpro-api-react/*": ["../openpro-api-react/src/*"]
-    }
+    "paths": {}
   }
 }
