--- a/OpenPro.Backend/.gitmodules
+++ b/OpenPro.Backend/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "openpro-api-react"]
 	path = openpro-api-react
-	url = ../openpro-api-react
+	url = https://github.com/xxomat/openpro-api-react.git
 
