Update PRD documentation and backend setup for openpro-api-react integration
Enhanced the PRD documentation to clarify the backend's interaction with the openpro-api-react submodule, emphasizing the removal of direct frontend dependencies. Updated the backend setup instructions to include symbolic link creation for the openpro-api-react module, ensuring a streamlined development process. Additionally, modified the .gitignore to exclude the openpro-api-react directory, maintaining a clean repository structure. This commit supports the new architecture by ensuring proper integration and usage of the openpro-api-react module.

--- a/OpenPro.Backend/.gitmodules
+++ b/OpenPro.Backend/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "openpro-api-react"]
 	path = openpro-api-react
-	url = https://github.com/xxomat/openpro-api-react.git
+	url = ../openpro-api-react
 
