Integrate phone number input validation in BookingModal
- Added react-phone-number-input for phone number input handling.
- Implemented validation functions for client data fields including name, email, city, and phone number.
- Enhanced the BookingModal UI to display validation errors dynamically.
- Updated client data state management to include phone number validation, improving user experience during booking.
- Adjusted styling for input fields to reflect validation states.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.8",
     "@astrojs/react": "^4.0.0",
+    "astro": "^5.15.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.14"
   }
 }
