Add npm run dev:with-stub option (to allow testing with OpenPro server)
- Added `cross-env` as a development dependency to manage environment variables.
- Introduced a new script `dev:with-stub` for running the application in stub mode.
- Updated `README.md` and `PRD.md` to reflect new configuration options for suppliers and development modes.
- Modified `config.ts` to support dynamic supplier configuration based on the selected mode (production or stub).

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev:with-stub": "cross-env PUBLIC_USE_STUB_MODE=true astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -14,5 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.14"
+  },
+  "devDependencies": {
+    "cross-env": "^10.1.0"
   }
 }
