Enhance rate type management in ProviderCalendars
- Updated `astro.config.mjs` and `tsconfig.json` to include path aliases for services, components, and types, improving module resolution.
- Added a new `RateTypeManagementModal` component for creating, modifying, and deleting rate types directly from the admin interface.
- Integrated the rate type management modal into the `ProviderCalendars` component, allowing users to manage rate types seamlessly.
- Enhanced the `CompactGrid` and related components to support the new rate type management features, ensuring proper data handling and user experience.
- Updated documentation to reflect the new functionalities and user interactions related to rate type management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@/services/*": ["src/services/*"],
+      "@/components/*": ["src/components/*"],
+      "@/types": ["src/components/ProviderCalendars/types"]
+    }
   }
 }
