Update dependencies and refactor ProviderCalendars component
- Added `class-transformer` and `reflect-metadata` to dependencies for improved data handling and TypeScript support.
- Refactored `ProviderCalendars` component to standardize property names from French to English (e.g., `idFournisseur` to `supplierId`, `nom` to `name`).
- Updated related components and hooks to ensure consistency in property naming and improve code readability.
- Enhanced type definitions and utility functions to align with the new naming conventions, ensuring better maintainability and clarity across the codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "@/services/*": ["src/services/*"],
       "@/components/*": ["src/components/*"],
       "@/types": ["src/components/ProviderCalendars/types"]
-    }
+    },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
