--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/react": "^4.0.0",
     "astro": "^5.15.8",
+    "class-transformer": "^0.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-phone-number-input": "^3.4.14"
+    "react-phone-number-input": "^3.4.14",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "cross-env": "^10.1.0"
